--- a/lightchain.db/lightchain.db.csproj
+++ b/lightchain.db/lightchain.db.csproj
@@ -5,6 +5,10 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="RocksDbNative" Version="5.4.6.10" />
     <PackageReference Include="RocksDbSharp" Version="5.4.6.10" />
