项目改名与类库功能拆解

--- a/lightchain/lightchain.csproj
+++ b/lightchain/lightchain.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\httpserver\httpserver.csproj" />
+    <ProjectReference Include="..\thinsdk.neo\thinsdk.neo.csproj" />
   </ItemGroup>
 
 </Project>
