--- a/lightdb.test/lightdb.test.csproj
+++ b/lightdb.test/lightdb.test.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\lightchain.db\lightdb.csproj" />
+    <ProjectReference Include="..\lightdb\lightdb.csproj" />
   </ItemGroup>
 
 </Project>
