服务器 开始初始化了

--- a/lightchain/lightdb.server.csproj
+++ b/lightchain/lightdb.server.csproj
@@ -10,13 +10,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\httpserver\httpserver.csproj" />
     <ProjectReference Include="..\lightdb\lightdb.lib.csproj" />
     <ProjectReference Include="..\thinsdk.neo\lightdb.sdk.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="db\" />
+    <None Update="config.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
