--- a/lightdb.testclient/lightdb.testclient.csproj
+++ b/lightdb.testclient/lightdb.testclient.csproj
@@ -5,6 +5,10 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\thinsdk.neo\lightdb.sdk.csproj" />
   </ItemGroup>
